<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/app_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"

            app:key="reply"
            app:title="@string/app_name"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/app_name" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/app_name"
            app:summaryOn="@string/app_name"
            app:title="@string/app_name" />

    </PreferenceCategory>

</PreferenceScreen>