<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!-- Первый контейнер: НАСТРОЙКИ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="top"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/buton_settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"      />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!-- Второй контейнер: ТЕМНАЯ ТЕМА -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <Switch
                android:id="@+id/switch_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="15dp"
                android:gravity="center|start"
                android:showText="true"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/dark_theme"
                android:textOff="@string/whitespace"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck,TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />


        </FrameLayout>

<!-- Третий контейнер: ПОДЕЛИТЬСЯ... -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imageButton_share"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/share_app"
                android:foreground="@android:drawable/ic_menu_share"
                android:tooltipText="@string/share_app"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        </FrameLayout>

<!-- Четвертый контейнер: ТЕХПОДДЕРЖКА -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="VisualLintOverlap" />

            <ImageButton
                android:id="@+id/imageButton_support"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/support"
                android:foreground="@drawable/support_girl"
                android:tooltipText="@string/support"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        </FrameLayout>

<!-- Пятый контейнер: СОГЛАШЕНИЕ -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/agreement"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imageButton_forward"
                style="@android:style/Widget.ImageButton"
                android:layout_width="8dp"
                android:layout_height="14dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/agreement"
                android:foreground="@drawable/forward"
                android:tooltipText="@string/agreement"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>