<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#D9DBDC"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_layout_height">

            <ImageView
                android:id="@+id/back_off_search"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="top"
                android:layout_margin="@dimen/margin_end"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/back" />

            <TextView
                style="@style/TextBigStyle"
                android:layout_marginStart="64dp"
                android:layout_marginTop="6dp"
                android:text="@string/title_activity_search" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_layout_height"
            android:padding="5dp"
            android:layout_gravity="end"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputSearchText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_rounded"
                android:drawableStart="@drawable/search"

                android:drawablePadding="10dp"
                android:drawableTint="#B3A7A7"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:hint="@string/input_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="32dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral60" />

            <ImageView
                android:id="@+id/icon_clear_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center|end"
                android:layout_margin="24dp"
                android:contentDescription="@string/contentDescriptionDelete"
                android:foreground="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="invisible" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_search_song"></androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>