<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/size_sl">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/size_sl"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/tv_new_playlist"
        style="@style/TextBigStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        android:text="@string/new_playlist" />

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_coverPl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_playlist"
        app:layout_constraintBottom_toTopOf="@id/tv_namePl"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">
        <ImageView
            android:id="@+id/ivCoverPlImage"
            android:layout_width="315dp"
            android:layout_height="315dp"
            android:scaleType="centerCrop"
            android:padding="4dp"
            android:src="@drawable/dotted_rectangle"/>


    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/iv_picture_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_load"
        app:layout_constraintBottom_toBottomOf="@id/iv_coverPl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_coverPl" />

    <TextView
        android:id="@+id/tv_namePl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/et_namePl"
        app:layout_constraintTop_toBottomOf="@id/iv_coverPl"
        android:paddingTop="@dimen/size_xl"
        android:text="Название"
        />

    <EditText
        android:id="@+id/et_namePl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_namePl"
        app:layout_constraintBottom_toTopOf="@id/tv_descriptPl"
        android:paddingTop="@dimen/size_xl"
        android:foregroundTint="@color/text_color"
        android:hint="@string/name_playlist"
        />

    <TextView
        android:id="@+id/tv_descriptPl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_namePl"
        app:layout_constraintBottom_toTopOf="@id/et_descriptPl"
        android:paddingTop="@dimen/size_xl"
        android:text="Название"
        />

    <EditText
        android:id="@+id/et_descriptPl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_descriptPl"
        app:layout_constraintBottom_toTopOf="@id/tv_button_new"
        android:hint="@string/descript_playlist"
        android:paddingTop="@dimen/size_xl"
        android:foregroundTint="@color/text_color"
        />

    <TextView
        android:id="@+id/tv_button_new"
        style="@style/TextBigStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/button_rectangle"
        android:contentDescription="Создать"
        android:text="Создать"
        android:textColor="@color/white"
        android:tooltipText="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_descriptPl"
        android:layout_marginBottom="@dimen/size_xxl"
        />

</androidx.constraintlayout.widget.ConstraintLayout>