<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".MediaActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="left"
        android:padding="@dimen/size_xs"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cover512"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/size_xs"
        android:scaleType="fitCenter"
        android:src="@drawable/album"
        android:layout_marginHorizontal="@dimen/size_xxxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintBottom_toTopOf="@id/tv_title"         />

    <TextView
        android:id="@+id/tv_title"
        style="@style/PlayerTrackTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxxs"
        android:text="Name of track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_cover512" />


    <TextView
        android:id="@+id/tv_artist"
        style="@style/PlayerArtistTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_l"
        android:layout_marginBottom="@dimen/size_s"
        android:layout_marginTop="@dimen/size_xs"
        android:padding="@dimen/size_xxxs"
        android:text="Artist"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buttonadd"
        android:background="@color/background_icon"
        android:backgroundTint="@color/view_background"
        app:layout_constraintEnd_toStartOf="@+id/iv_play"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_playback_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_artist" />

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="@dimen/size_l"
        android:backgroundTint="@color/background_icon"
        android:src="@drawable/buttonplay"
        app:layout_constraintBottom_toBottomOf="@+id/iv_add"
        app:layout_constraintEnd_toStartOf="@+id/iv_like"
        app:layout_constraintStart_toEndOf="@+id/iv_add"
        app:layout_constraintTop_toBottomOf="@id/tv_artist"
        app:tint="@color/text_color" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buttonlike"
        android:background="@color/background_icon"
        android:backgroundTint="@color/view_background"
        app:layout_constraintTop_toBottomOf="@id/tv_artist"
        app:layout_constraintBottom_toTopOf="@id/tv_playback_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_play" />

    <TextView
        android:id="@+id/tv_playback_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxxs"
        android:text="0:30 "
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_play" />

    <TextView
        android:id="@+id/tv_duration_title"
        style="@style/NameFieldTextStyle"
        android:layout_marginStart="@dimen/size_l"
        android:padding="@dimen/size_xxxs"
        android:text="@string/duration"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/tv_album_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_playback_time" />

    <TextView
        android:id="@+id/tv_duration"
        style="@style/PlayerFieldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxs"
        android:text=" 5:25 "
        android:textAlignment="viewEnd"
        android:layout_marginEnd="@dimen/size_xxxs"
        app:layout_constraintBottom_toTopOf="@id/tv_album_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_duration_title"
        app:layout_constraintTop_toBottomOf="@id/tv_playback_time" />

    <TextView
        android:id="@+id/tv_album_title"
        style="@style/NameFieldTextStyle"
        android:layout_marginStart="@dimen/size_l"
        android:padding="@dimen/size_xxxs"
        android:text="@string/almum"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/tv_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_duration" />

    <TextView
        android:id="@+id/tv_album"
        style="@style/PlayerFieldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxs"
        android:layout_marginEnd="@dimen/size_xxxs"
        android:text=" Yesterday (2009) "
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@id/tv_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_duration_title"
        app:layout_constraintTop_toBottomOf="@id/tv_duration" />

    <TextView
        android:id="@+id/year"
        style="@style/NameFieldTextStyle"
        android:layout_marginStart="@dimen/size_l"
        android:padding="@dimen/size_xxxs"
        android:text="@string/year"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/tv_genre_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_album_title" />

    <TextView
        android:id="@+id/tv_year"
        style="@style/PlayerFieldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxs"
        android:text=" 1965 "
        android:textAlignment="viewEnd"
        android:layout_marginEnd="@dimen/size_xxxs"
        app:layout_constraintBottom_toTopOf="@id/tv_genre_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_duration_title"
        app:layout_constraintTop_toBottomOf="@id/tv_album_title" />

    <TextView
        android:id="@+id/tv_genre_title"
        style="@style/NameFieldTextStyle"
        android:layout_marginStart="@dimen/size_l"
        android:padding="@dimen/size_xxxs"
        android:text="@string/genre"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/tv_country_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_year" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/PlayerFieldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxs"
        android:text=" Рок "
        android:layout_marginEnd="@dimen/size_xxxs"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@id/tv_country_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_duration_title"
        app:layout_constraintTop_toBottomOf="@id/tv_year" />

    <TextView
        android:id="@+id/tv_country_title"
        style="@style/NameFieldTextStyle"
        android:layout_marginStart="@dimen/size_l"
        android:layout_marginBottom="@dimen/size_xxxs"
        android:padding="@dimen/size_xxxs"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_title" />

    <TextView
        android:id="@+id/tv_country"
        style="@style/PlayerFieldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_xxxs"
        android:text="@string/rf"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="@dimen/size_xxs"
        android:layout_marginBottom="@dimen/size_xxs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_duration_title"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_title" />

</androidx.constraintlayout.widget.ConstraintLayout>